@@ -3,7 +3,14 @@ package in.bushansirgur.expensetrackerapi.service;
 import java.sql.Date;
 import java.util.List;
 import java.util.Optional;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
+import in.bushansirgur.expensetrackerapi.dto.CategoryDTO;
+import in.bushansirgur.expensetrackerapi.dto.ExpenseDTO;
+import in.bushansirgur.expensetrackerapi.entity.CategoryEntity;
+import in.bushansirgur.expensetrackerapi.repository.CategoryRepository;
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -14,63 +21,125 @@ import in.bushansirgur.expensetrackerapi.exceptions.ResourceNotFoundException;
 import in.bushansirgur.expensetrackerapi.repository.ExpenseRepository;
 
 @Service
+@RequiredArgsConstructor
 public class ExpenseServiceImpl implements ExpenseService {
 
-	@Autowired
-	private ExpenseRepository expenseRepo;
-	
-	@Autowired
-	private UserService userService;
+
+	private final ExpenseRepository expenseRepo;
+	private final UserService userService;
+	private final CategoryRepository categoryRepository;
 	
 	@Override
-	public Page<Expense> getAllExpenses(Pageable page) {
-		return expenseRepo.findByUserId(userService.getLoggedInUser().getId(), page);
+	public List<ExpenseDTO> getAllExpenses(Pageable page) {
+		List<Expense> listOfExpenses = expenseRepo.findByUserId(userService.getLoggedInUser().getId(), page).toList();
+		return listOfExpenses.stream().map(expense -> mapToDTO(expense)).collect(Collectors.toList());
 	}
 
 	@Override
-	public Expense getExpenseById(Long id){
-		Optional<Expense> expense = expenseRepo.findByUserIdAndId(userService.getLoggedInUser().getId(), id);
-		if (expense.isPresent()) {
-			return expense.get();
+	public ExpenseDTO getExpenseById(String expenseId){
+		Expense existingExpense = getExpenseEntity(expenseId);
+		return mapToDTO(existingExpense);
+
+	}
+
+	private Expense getExpenseEntity(String expenseId) {
+		Optional<Expense> expense = expenseRepo.findByUserIdAndExpenseId(userService.getLoggedInUser().getId(), expenseId);
+		if (!expense.isPresent()) {
+			throw new ResourceNotFoundException("Expense is not found for the id "+ expenseId);
 		}
-		throw new ResourceNotFoundException("Expense is not found for the id "+id);
+		return expense.get();
 	}
 
 	@Override
-	public void deleteExpenseById(Long id) {
-		Expense expense = getExpenseById(id);
+	public void deleteExpenseById(String expenseId) {
+		Expense expense = getExpenseEntity(expenseId);
 		expenseRepo.delete(expense);
 	}
 
 	@Override
-	public Expense saveExpenseDetails(Expense expense) {
-		expense.setUser(userService.getLoggedInUser());
-		return expenseRepo.save(expense);
+	public ExpenseDTO saveExpenseDetails(ExpenseDTO expenseDTO) {
+		//check the existance of category
+		Optional<CategoryEntity> optionalCategory = categoryRepository.findByUserIdAndCategoryId(userService.getLoggedInUser().getId(), expenseDTO.getCategoryId());
+		if (!optionalCategory.isPresent()){
+			throw new ResourceNotFoundException("Category not found for the id "+expenseDTO.getCategoryId());
+		}
+		expenseDTO.setExpenseId(UUID.randomUUID().toString());
+		//map to entity object
+		Expense newExpense = mapToEntity(expenseDTO);
+		//save to the database
+		newExpense.setCategory(optionalCategory.get());
+		newExpense.setUser(userService.getLoggedInUser());
+		newExpense = expenseRepo.save(newExpense);
+		//map to response object
+		return mapToDTO(newExpense);
+	}
+
+	private ExpenseDTO mapToDTO(Expense newExpense) {
+		return ExpenseDTO.builder()
+				.expenseId(newExpense.getExpenseId())
+				.name(newExpense.getName())
+				.description(newExpense.getDescription())
+				.amount(newExpense.getAmount())
+				.date(newExpense.getDate())
+				.createdAt(newExpense.getCreatedAt())
+				.updatedAt(newExpense.getUpdatedAt())
+				.categoryDTO(mapToCategoryDTO(newExpense.getCategory()))
+				.build();
+	}
+
+	private CategoryDTO mapToCategoryDTO(CategoryEntity category) {
+		return CategoryDTO.builder()
+				.name(category.getName())
+				.categoryId(category.getCategoryId())
+				.build();
+	}
+
+	private Expense mapToEntity(ExpenseDTO expenseDTO) {
+		return Expense.builder()
+				.expenseId(expenseDTO.getExpenseId())
+				.name(expenseDTO.getName())
+				.description(expenseDTO.getDescription())
+				.date(expenseDTO.getDate())
+				.amount(expenseDTO.getAmount())
+				.build();
 	}
 
 	@Override
-	public Expense updateExpenseDetails(Long id, Expense expense){
-		Expense existingExpense = getExpenseById(id);
-		existingExpense.setName(expense.getName() != null ? expense.getName() : existingExpense.getName());
-		existingExpense.setDescription(expense.getDescription() != null ? expense.getDescription() : existingExpense.getDescription());
-		existingExpense.setCategory(expense.getCategory() != null ? expense.getCategory() : existingExpense.getCategory());
-		existingExpense.setDate(expense.getDate() != null ? expense.getDate() : existingExpense.getDate());
-		existingExpense.setAmount(expense.getAmount() != null ? expense.getAmount() : existingExpense.getAmount());
-		return expenseRepo.save(existingExpense);
+	public ExpenseDTO updateExpenseDetails(String expenseId, ExpenseDTO expenseDTO){
+		Expense existingExpense = getExpenseEntity(expenseId);
+		if (expenseDTO.getCategoryId() != null) {
+			Optional<CategoryEntity> optionalCategory = categoryRepository.findByUserIdAndCategoryId(userService.getLoggedInUser().getId(), expenseDTO.getCategoryId());
+			if (!optionalCategory.isPresent()) {
+				throw new ResourceNotFoundException("Category not found for the id "+expenseDTO.getCategoryId());
+			}
+			existingExpense.setCategory(optionalCategory.get());
+		}
+		existingExpense.setName(expenseDTO.getName() != null ? expenseDTO.getName() : existingExpense.getName());
+		existingExpense.setDescription(expenseDTO.getDescription() != null ? expenseDTO.getDescription() : existingExpense.getDescription());
+		existingExpense.setDate(expenseDTO.getDate() != null ? expenseDTO.getDate() : existingExpense.getDate());
+		existingExpense.setAmount(expenseDTO.getAmount() != null ? expenseDTO.getAmount() : existingExpense.getAmount());
+		existingExpense = expenseRepo.save(existingExpense);
+		return mapToDTO(existingExpense);
 	}
 
 	@Override
-	public List<Expense> readByCategory(String category, Pageable page) {
-		return expenseRepo.findByUserIdAndCategory(userService.getLoggedInUser().getId(), category, page).toList();
+	public List<ExpenseDTO> readByCategory(String category, Pageable page) {
+		Optional<CategoryEntity> optionalCategory = categoryRepository.findByNameAndUserId(category, userService.getLoggedInUser().getId());
+		if (!optionalCategory.isPresent()) {
+			throw new ResourceNotFoundException("Category not found for the name "+category);
+		}
+		List<Expense> list = expenseRepo.findByUserIdAndCategoryId(userService.getLoggedInUser().getId(), optionalCategory.get().getId(), page).toList();
+		return list.stream().map(expense -> mapToDTO(expense)).collect(Collectors.toList());
 	}
 
 	@Override
-	public List<Expense> readByName(String keyword, Pageable page) {
-		return expenseRepo.findByUserIdAndNameContaining(userService.getLoggedInUser().getId(), keyword, page).toList();
+	public List<ExpenseDTO> readByName(String keyword, Pageable page) {
+		List<Expense> list = expenseRepo.findByUserIdAndNameContaining(userService.getLoggedInUser().getId(), keyword, page).toList();
+		return list.stream().map(expense -> mapToDTO(expense)).collect(Collectors.toList());
 	}
 
 	@Override
-	public List<Expense> readByDate(Date startDate, Date endDate, Pageable page) {
+	public List<ExpenseDTO> readByDate(Date startDate, Date endDate, Pageable page) {
 		
 		if (startDate == null) {
 			startDate = new Date(0);
@@ -80,7 +149,8 @@ public class ExpenseServiceImpl implements ExpenseService {
 			endDate = new Date(System.currentTimeMillis());
 		}
 		
-		return expenseRepo.findByUserIdAndDateBetween(userService.getLoggedInUser().getId(), startDate, endDate, page).toList();
+		List<Expense> list = expenseRepo.findByUserIdAndDateBetween(userService.getLoggedInUser().getId(), startDate, endDate, page).toList();
+		return list.stream().map(expense -> mapToDTO(expense)).collect(Collectors.toList());
 	}
 
 }
